syntax = "proto2";

package protons;

service VacationService {
    rpc WhenDoYouStartYourVacation(VacationRequest) returns (VacationResponse){}
}

message VacationRequest {
    required string name = 1;
}

message VacationResponse {
    required string reply = 1;
}
